@@ -2,14 +2,15 @@
 '\" Copyright (c) 1993 The Regents of the University of California.
 '\" Copyright (c) 1994-1997 Sun Microsystems, Inc.
 '\" Copyright (c) 1993-1997 Bell Labs Innovations for Lucent Technologies
+'\" Copyright (c) 1998-2000 Ajuba Solutions
 '\"
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: info.n,v 1.3 2000/01/26 21:36:35 ericm Exp $
+'\" RCS: @(#) $Id: info.n,v 1.4 2000/05/27 23:58:00 hobbs Exp $
 '\" 
 .so man.macros
-.TH info n 7.5 Tcl "Tcl Built-In Commands"
+.TH info n 8.4 Tcl "Tcl Built-In Commands"
 .BS
 '\" Note:  do not modify the .SH NAME line immediately below!
 .SH NAME
@@ -147,12 +148,15 @@ matching \fIpattern\fR are returned.
 Matching is determined using the same rules as for
 \fBstring match\fR.
 .TP
-\fBinfo script\fR
+\fBinfo script\fR ?\fIfilename\fR?
 If a Tcl script file is currently being evaluated (i.e. there is a
 call to \fBTcl_EvalFile\fR active or there is an active invocation
 of the \fBsource\fR command), then this command returns the name
-of the innermost file being processed.  Otherwise the command returns an
-empty string.
+of the innermost file being processed.  If \fIfilename\fR is specified,
+then the return value of this command will be modified for the
+duration of the active invocation to return that name.  This is
+useful in virtual file system applications.
+Otherwise the command returns an empty string.
 .TP
 \fBinfo sharedlibextension\fR
 Returns the extension used on this platform for the names of files
